kube-ingress-angular/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home1
            port:
              number: 80
      - path: /pepe(.*)
        pathType: Prefix
        backend:
          service:
            name: home2
            port:
              number: 80
